--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <p>
                                 Contact: jenil.k.btechi15@ahduni.edu.in
                             </p>
-							<a href="https://drive.google.com/a/ahduni.edu.in/uc?authuser=1&id=1yC_1UOTO7F7X3G587EnJ2nHW4LzpPE6B&export=download " class="primary-btn text-uppercase" target="_blank>Download Resume</a>
+							<a href="https://drive.google.com/a/ahduni.edu.in/uc?authuser=1&id=1yC_1UOTO7F7X3G587EnJ2nHW4LzpPE6B&export=download " class="primary-btn text-uppercase">Download Resume</a>
 						</div>
 						<div class="banner-right d-flex ">
 							<img class = "image-jenil"src="img/hero-img.png" alt="" style="width:241px;height:306px;">
