--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<meta name="keywords" content="">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
+		<link rel="shortcut icon" href="img/icon.ico">
 		<!-- Site Title -->
 		<title>Jenil Kansara</title>
 
