--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							
 							<h1>Jenil Kansara</h1>
 							<p> 
-                                B. Tech. in Information and Communication Technology, Ahmedabad University
+                                <strong>B. Tech. in Information and Communication Technology<br/> Ahmedabad University</strong>
                             </p>
                             <p>
                                 My primary interests revolve around the fields of Business Analytics, Data Visualization, and Big Data. I am passionate about converting data into insights to add value to a business.
