--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
                                 I am experienced with Python, R, Google Analytics, Tableau, MS Excel, HTML, and many other technologies.
 							</p>
                             <p>
-                                Contact: jenil.k.btechi15@ahduni.edu.in
+                                Contact: <strong><a href = "mailto: jenil.k.btechi15@ahduni.edu.in">jenil.k.btechi15@ahduni.edu.in</a></strong>
                             </p>
+							<br/>
 							<a href="https://drive.google.com/a/ahduni.edu.in/uc?authuser=1&id=1yC_1UOTO7F7X3G587EnJ2nHW4LzpPE6B&export=download " class="primary-btn text-uppercase">Download Resume</a>
 						</div>
 						<div class="banner-right d-flex ">
