--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">About</a></li>
 			          
-			          <li><a href="academics.html">Academics</a></li>	        
+			          <li><a href="academics.html">Work & Academics</a></li>	        
 
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
