--- a/academics.html
+++ b/academics.html
@@ -80,12 +80,14 @@
 								<div class="">
 									<ol class="ordered-list">
                                         <font size="+1">
-										<li><span>Summer Intern as Business Analyst at Urvam Technologies</span></li>
-                                       <br/><div class="pl-30">Used Google Analytics to set goals for the client businesses including application outreach and performed prescriptive analysis. <br/><br/>Gained experience on working with databases in a business setting.  </div><br/>
+										<li><span>’Business Intelligence and Analytics’ Intern at Urvam Technologies</span></li>
+                                       <br/><div class="pl-30">Created custom reports using Google Analytics Reporting with the collected data. Included Descriptive
+and Prescriptive Analysis of the user data of the client websites in the report and suggested strategies
+for better growth.<br/><br/>Performed Data Collection and Data Cleaning of the unstructured and structured data of the firm. </div><br/>
 										<li><span>Part-Time Internship at the Office of Ahmedabad University</span></li> <br/><div class="pl-30">Created the documentation for various modules of the in-house developed ERP system software of the Ahmedabad University. <br/><br/>Researched and documented the academic processes including transcript generation and class schedule management for the further development of the ERP system.  </div><br/>
 										<li><span>Summer Intern as Game Developer at Param Labs</span></li>
-                                              <br/><div class="pl-30">Designed and developed one of the first 6-DOF Augmented Reality games for the mobile platforms. <br/><br/>Integrated Google Analytics in various projects developed in Unity Engine toc ollect coherent data about the usage of the applications to
-perform prescriptive analytics.</div><br/>
+                                              <br/><div class="pl-30">Designed and developed one of the first 6-DOF Augmented Reality games for the mobile platforms. <br/><br/>Integrated Google Analytics in various projects developed in Unity Engine to collect the usage data
+about the games.</div><br/>
                                         </font>
 										
 									</ol>
@@ -95,9 +97,10 @@ perform prescriptive analytics.</div><br/>
 								<div class="">
 									<ol class="ordered-list">
                                         <font size="+1">
-										<li><span>Successful Completion of Global Sandbox Entrepreneurship Programme, Syracuse University, 2016</span></li>
-										<li><span>Second in Udgam, Business Development Competition, Ahmedabad University</span></li>
-										<li><span>First in Short Movie Making Competition, Aaghaaz, Ahmedabad University, 2016</span></li>
+										<li><span>Successfully Completed the ’Global Sandbox’, a Collaborative Project for Building a Business Model for
+a Global Scale Start-Up by Syracuse University, 2016.</span></li>
+										<li><span>Finalist in ’Udgam. Idea. Plan. Pitch.’, a Sustainable Business Model Designing Competition, 2016</span></li>
+										<li><span>First in ’Smack-The-Dub’, a Short-Film-Making Competition, Aaghaaz Cultural Festival, Ahmedabad University, Jan’16</span></li>
 										<li><span>First in District in Sanskrit-Parikshaya, Bruhad Gujarat Sanskrit Parishad, 2008</span></li>
 						
                                         </font>
@@ -108,9 +111,9 @@ perform prescriptive analytics.</div><br/>
 								<div class="">
 									<ol class="ordered-list">
                                         <font size="+1">
-										<li><span>Secretary of IEEE Students’ Branch at Ahmedabad University, 2017-18</span></li>
-										<li><span>Member of Marketing Committee of Ingenium, 2017</span></li>
-                                        <li><span>Participants Registration Volunteer in Aaghaaz, 2016</span></li>
+										<li><span>Secretary & Executive Committee Member, IEEE Students Branch, Ahmedabad University, 2018</span></li>
+										<li><span>Member of the Organizing Committee, FSTTCS Conference 2018, Ahmedabad University</span></li>
+                                        <li><span>Marketing Committee Member, Ingenium, Ahmedabad University, 2017</span></li>
                                         </font>
 									</ol>
 								</div>
