--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <strong>B. Tech. in Information and Communication Technology<br/> Ahmedabad University</strong>
                             </p>
                             <p>
-                                My primary interests revolve around the fields of Business Analytics, Data Visualization, and Big Data. I am passionate about converting data into insights to add value to a business.
+                                My primary interests revolve around the fields of Business Intelligence and Analytics, Data Visualization, and Big Data. I am passionate about converting data into insights to add value to a business.
                               </p>
                             <p>
                                 I am experienced with Python, R, Google Analytics, Tableau, MS Excel, HTML, and many other technologies.
