--- a/academics.html
+++ b/academics.html
@@ -272,10 +272,11 @@ a Global Scale Start-Up by Syracuse University, 2016.</span></li>
 								<div class="">
 									<ol class="ordered-list">
                                         <font size="+1">
+										<li><span>University of Illinois at Urbana-Champaign's Data Visualization, Coursera, 2018</span></li>
 										<li><span>University of Pennsylvania's Business Analytics Specialization, Coursera, 2018</span></li>
 										<li><span>Stanford University’s Machine Learning, Coursera, 2018</span></li>
 										<li><span>Google Analytics Beginner, Advanced, and Power User, Google, 2018</span></li>
-										<li><span>Data Science and Analytics Using R programming, Udemy, 2018</span></li>
+										
 										<li><span>Michigan University’s Introduction to Game Development, Coursera, 2017</span></li>
                                         <li><span>Introduction to Python Programming, Udacity, 2017</span></li>
                                         </font>
