--- a/volunteering.html
+++ b/volunteering.html
@@ -41,7 +41,7 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">About</a></li>
 			          <li><a href="academics.html">Work & Academics</a></li>   
-                      <li><a href="volunteering.html">Volunteering</a></li>   
+                      <li><a href="volunteering.html">Leadership & Advocacy</a></li>   
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
 		    	</div>
@@ -54,7 +54,7 @@
 					<div class="">
 						<div class="about-content">
 							<h1 class="text-white">
-								Volunteering				
+								Leadership & Advocacy				
 							</h1>	
 							
 						</div>	
