--- a/academics.html
+++ b/academics.html
@@ -104,7 +104,7 @@
                                         <ol class="ordered-list">
                                             <font size="+1">
                                                 
-                                            <li><span>Data Analytics for Accidental Drug Related Deaths</span></li> <br/><div class="pl-30">
+                                            <li><span> <a href="Accidental_Drug_Related_Deaths.html">Data Analytics for Accidental Drug Related Deaths</span></li></a> <br/><div class="pl-30">
                                                 • Led a team of four to better understand dataset containing accidental deaths caused by drugs in Connecticut.<br/><br/>
                                                 • Performed data aggregation, cleansing, and preprocessing with pandas and NumPy libraries in Python.<br/><br/>
                                                 • Will develop models using linear regression, logistic regression, and Naïve Bayes to extract insightful information.
